# sem2_OOP

Exceptions/: CustomException.cpp  CustomException.h
a1-911-Andrioaie-Daria-1/: CMakeLists.txt  problem 4.c
a10-911-Andrioaie-Daria/: CMakeLists.txt  main.cpp
a10-911-Andrioaie-Daria/Administator_service/: Action.cpp  Action.h  AdminService.cpp  AdminService.h
a10-911-Andrioaie-Daria/Domain/: Dog.cpp  Dog.h
a10-911-Andrioaie-Daria/Repository/: DogRepository.h  FileRepository.h
a10-911-Andrioaie-Daria/Tests/: AdminServiceTests.h  RepositoryTests.cpp  RepositoryTests.h  TestAll.cpp
a10-911-Andrioaie-Daria/UI/: AdminGUI.cpp  AdminGUI.h  DogCustomModel.cpp  DogCustomModel.h  PictureDelegate.cpp  PictureDelegate.h  UserGUI.cpp  UserGUI.h  setFileGUI.cpp
a10-911-Andrioaie-Daria/User_service/: AbstractAdoptionList.cpp  AbstractAdoptionList.h  UserService.cpp  UserService.h
a10-911-Andrioaie-Daria/Validations/: DogValidator.cpp
a23-911-Andrioaie-Daria/: CMakeLists.txt  start.c
a23-911-Andrioaie-Daria/Controller/: controller.c  controller.h
a23-911-Andrioaie-Daria/Domain/: offer.c  offer.h
a23-911-Andrioaie-Daria/Dynamic array/: dynamic_array.c  dynamic_array.h
a23-911-Andrioaie-Daria/Repository/: repository.c  repository.h
a23-911-Andrioaie-Daria/Tests/: domain_tests.c  domain_tests.h  repository_tests.c  repository_tests.h  service_tests.c  service_tests.h
a23-911-Andrioaie-Daria/User Interface/: ui.c  ui.h
a45-911-Andrioaie-Daria/: CMakeLists.txt  main.cpp
a45-911-Andrioaie-Daria/Administator_service/: AdminService.cpp  AdminService.h
a45-911-Andrioaie-Daria/Domain/: Dog.cpp  Dog.h
a45-911-Andrioaie-Daria/Repository/: DogRepository.cpp  DogRepository.h
a45-911-Andrioaie-Daria/Tests/: AdminServiceTests.cpp  AdminServiceTests.h  DomainTests.cpp  DynamicArrayTests.cpp  DynamicArrayTests.h  RepositoryTests.cpp  RepositoryTests.h  TestAll.cpp  TestAll.h  UserServiceTests.cpp  UserServiceTests.h  ValidatorTests.cpp  ValidatorTests.h
a45-911-Andrioaie-Daria/UI/: ConsoleUI.cpp  ConsoleUI.h
a45-911-Andrioaie-Daria/User_service/: UserService.cpp  UserService.h
a45-911-Andrioaie-Daria/Validations/: DogValidator.cpp  DogValidator.h
a67-911-Andrioaie-Daria/: CMakeLists.txt  main.cpp
a67-911-Andrioaie-Daria/Administator_service/: AdminService.cpp  AdminService.h
a67-911-Andrioaie-Daria/Domain/: Dog.cpp  Dog.h
a67-911-Andrioaie-Daria/Repository/: DogRepository.cpp  DogRepository.h  FileRepository.cpp
a67-911-Andrioaie-Daria/Tests/: AdminServiceTests.cpp  DomainTests.cpp  DomainTests.h  DynamicArrayTests.cpp  TestAll.h  UserServiceTests.cpp  ValidatorTests.cpp  ValidatorTests.h
a67-911-Andrioaie-Daria/User_service/: AbstractAdoptionList.h  UserService.cpp  UserService.h
a67-911-Andrioaie-Daria/Validations/: DogValidator.cpp
a89-911-Andrioaie-Daria/: CMakeLists.txt  README.md  main.cpp
a89-911-Andrioaie-Daria/Administator_service/: AdminService.cpp  AdminService.h
a89-911-Andrioaie-Daria/Dynamic_array/: DynamicArray.h
a89-911-Andrioaie-Daria/Exceptions/: CustomException.cpp  CustomException.h
a89-911-Andrioaie-Daria/Repository/: DogRepository.cpp
a89-911-Andrioaie-Daria/Tests/: UserServiceTests.h
a89-911-Andrioaie-Daria/UI/: AdminGUI.cpp  AdminGUI.h  ConsoleUI.cpp  ConsoleUI.h  GUI.cpp  GUI.h  UserGUI.cpp  UserGUI.h  setFileGUI.h
a89-911-Andrioaie-Daria/User_service/: UserService.cpp
a89-911-Andrioaie-Daria/Validations/: DogValidator.h
e2-911-Andrioaie-Daria-1/: CMakeLists.txt  main.cpp
e2-911-Andrioaie-Daria-1/Domain/: Building.cpp  Building.h  Ethnologist.cpp  Ethnologist.h
e2-911-Andrioaie-Daria-1/Observer/: Observer.h
e2-911-Andrioaie-Daria-1/Repository/: Repository.cpp  Repository.h
e2-911-Andrioaie-Daria-1/Service/: Service.cpp  Service.h
e2-911-Andrioaie-Daria-1/UI/: EthWindow.cpp  EthWindow.h  GUI.cpp  GUI.h  MapWindow.cpp  MapWindow.h  TableModel.cpp  TableModel.h
